--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
-SESSION_ID="PLEASE ADD YOUR SESSION HERE INCONNU~XD~"
-PREFIX=.
-OWNER_NUMBER=554488138425
+SESSION_ID="INCONNU~XD~j0hFhQAT#Gg8xGNY8RLkDH9RgoyGo22rQlqy9jk-v3K1uqz5zweA"
+PREFIX='
+OWNER_NUMBER=18293511531
 SUDO_NUMBER=554488138425
-OWNER_NAME=INCONNU BOY
+OWNER_NAME=Mr dacheno sk7 
 AUTO_STATUS_SEEN=true
-AUTO_BIO=true
+AUTO_BIO=false
 AUTO_STATUS_REACT=true
 AUTO_READ=false
-AUTO_RECORDING=false
+AUTO_RECORDING=true
 AUTO_REACT=false
 STATUS_READ_MSG=STATUS VIEWED BY INCONNU XD V2 ✅
 ANTILINK=false
-ANTIBOT=true
+ANTIBOT=false
 ANTIBOT_WARNINGS=3
 REJECT_CALL=false
 NOT_ALLOW=true
