--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SESSION_ID="INCONNU~XD~j0hFhQAT#Gg8xGNY8RLkDH9RgoyGo22rQlqy9jk-v3K1uqz5zweA"
+SESSION_ID="INCONNU~XD~nsAQwaJR#3xQjScTAMkihxeWsmX3M5O388rtKPWoijtYPpZYnDmA"
 PREFIX='
-OWNER_NUMBER=18293511531
+OWNER_NUMBER=18292748112
 SUDO_NUMBER=554488138425
 OWNER_NAME=Mr dacheno sk7 
 AUTO_STATUS_SEEN=true
