--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SESSION_ID="INCONNU~XD~nsAQwaJR#3xQjScTAMkihxeWsmX3M5O388rtKPWoijtYPpZYnDmA"
+SESSION_ID="INCONNU~XD~354QxKgD#BH1k6ZK3gwWn2fsgLVFC2l7M7drBUqf0Wkemze7Pmx0"
 PREFIX='
-OWNER_NUMBER=18292748112
+OWNER_NUMBER=18293511531
 SUDO_NUMBER=554488138425
 OWNER_NAME=Mr dacheno sk7 
 AUTO_STATUS_SEEN=true
