--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SESSION_ID="INCONNU~XD~354QxKgD#BH1k6ZK3gwWn2fsgLVFC2l7M7drBUqf0Wkemze7Pmx0"
+SESSION_ID="INCONNU~XD~ysgX0A7B#g5RF0RCd248ycNxw8mKT5LI2G3Ts693rmq5lOhpx5DE"
 PREFIX='
-OWNER_NUMBER=18293511531
+OWNER_NUMBER=18292748112
 SUDO_NUMBER=554488138425
 OWNER_NAME=Mr dacheno sk7 
 AUTO_STATUS_SEEN=true
