--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SESSION_ID="INCONNU~XD~ysgX0A7B#g5RF0RCd248ycNxw8mKT5LI2G3Ts693rmq5lOhpx5DE"
-PREFIX='
-OWNER_NUMBER=18292748112
+SESSION_ID="INCONNU~XD~SlICyQSJ#EyY0sEDXyfpD93pkb0C9zMiNQlfu4gOzZXcdkIa4Tf0"
+PREFIX=,
+OWNER_NUMBER=18293511531
 SUDO_NUMBER=554488138425
 OWNER_NAME=Mr dacheno sk7 
 AUTO_STATUS_SEEN=true
